--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "axios": "1.2.2",
     "dayjs": "1.11.7",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
-    "react-helmet-async": "^1.3.0",
+    "react-helmet-async": "1.3.0",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "2.1.4"
