--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "axios": "1.2.2",
+    "chart.js": "4.1.2",
     "dayjs": "1.11.7",
     "react": "18.2.0",
+    "react-chartjs-2": "5.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
