--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
+    "@formatjs/intl-pluralrules": "5.1.8",
     "@mui/icons-material": "5.11.0",
     "@mui/material": "5.11.2",
     "@mui/x-date-pickers": "5.0.13",
@@ -17,9 +18,10 @@
     "dayjs": "1.11.7",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
-    "react-color": "^2.19.3",
+    "react-color": "2.19.3",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
+    "react-intl": "6.2.5",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "2.1.4"
