--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "react-intl": "6.2.5",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
+    "sort-by": "1.2.0",
     "web-vitals": "2.1.4"
   },
   "scripts": {
