--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "axios": "1.2.3",
     "chart.js": "4.2.0",
     "dayjs": "1.11.7",
+    "localforage": "1.10.0",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-color": "2.19.3",
