--- a/web/package.json
+++ b/web/package.json
@@ -3,18 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.10.5",
-    "@emotion/styled": "11.10.5",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
     "@fontsource/roboto": "4.5.8",
     "@formatjs/intl-pluralrules": "5.1.8",
-    "@mui/icons-material": "5.11.0",
-    "@mui/material": "5.11.5",
-    "@mui/x-date-pickers": "5.0.15",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
-    "axios": "1.2.3",
-    "chart.js": "4.2.0",
+    "@mui/icons-material": "5.11.9",
+    "@mui/material": "5.11.9",
+    "@mui/x-date-pickers": "5.0.19",
+    "axios": "1.3.3",
+    "chart.js": "4.2.1",
     "dayjs": "1.11.7",
     "localforage": "1.10.0",
     "react": "18.2.0",
@@ -22,17 +19,14 @@
     "react-color": "2.19.3",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
-    "react-intl": "6.2.5",
-    "react-router-dom": "6.7.0",
-    "react-scripts": "5.0.1",
-    "sort-by": "1.2.0",
-    "web-vitals": "3.1.1"
+    "react-intl": "6.2.8",
+    "react-router-dom": "6.8.1",
+    "sort-by": "1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -54,11 +48,15 @@
   },
   "devDependencies": {
     "@s-ui/mono": "2.34.0",
-    "eslint": "8.32.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@vitejs/plugin-react": "3.1.0",
+    "eslint": "8.34.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-n": "15.6.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.32.1"
+    "eslint-plugin-react": "7.32.2",
+    "vite": "4.1.2"
   }
 }
