--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -102,3 +103,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Docker database
+postgres_data
