--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "alignmind_server",
   "version": "0.0.1",
-  "description": "",
+  "description": "Alignmind is a web application for tracking emotions and thoughts. The application was created with the goal of helping you reflect on your emotions and thoughts, and keep a record of them in a simple and organized way.",
   "author": "bsebas <bjohansebas@gmail.com>",
   "private": true,
   "license": "MPL V2",
   "scripts": {
+    "co": "sui-mono commit",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:debug": "NODE_ENV=development nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -21,27 +22,34 @@
   },
   "dependencies": {
     "@nestjs/common": "9.3.9",
+    "@nestjs/config": "2.3.1",
     "@nestjs/core": "9.3.9",
     "@nestjs/mapped-types": "1.2.2",
-    "@nestjs/platform-express": "9.0.0",
+    "@nestjs/platform-express": "9.3.9",
+    "@nestjs/typeorm": "9.0.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "joi": "17.8.3",
+    "pg": "8.9.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.0"
+    "rxjs": "7.8.0",
+    "typeorm": "0.3.12"
   },
   "devDependencies": {
-    "@nestjs/cli": "9.0.0",
+    "@nestjs/cli": "9.2.0",
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.3.9",
-    "@types/express": "4.17.13",
+    "@s-ui/mono": "2.34.0",
+    "@types/express": "4.17.17",
     "@types/jest": "29.4.0",
     "@types/node": "18.14.1",
+    "@types/pg": "8.6.6",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
     "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-prettier": "4.2.1",
     "jest": "29.4.3",
     "prettier": "2.8.4",
     "source-map-support": "0.5.21",
@@ -49,7 +57,7 @@
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
-    "tsconfig-paths": "4.1.2",
+    "tsconfig-paths": "3.14.2",
     "typescript": "4.9.5"
   },
   "jest": {
