--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "migrations:generate": "npm run typeorm migration:generate -- -d src/database/dataSource.ts",    
+    "migrations:generate": "npm run typeorm migration:generate -- -d src/database/dataSource.ts",
     "migrations:run": "npm run typeorm migration:run -- -d src/database/dataSource.ts",
     "migrations:show": "npm run typeorm migration:show -- -d src/database/dataSource.ts",
     "migrations:drop": "npm run typeorm migration:drop -- -d src/database/dataSource.ts"
@@ -29,12 +29,18 @@
     "@nestjs/common": "9.3.9",
     "@nestjs/config": "2.3.1",
     "@nestjs/core": "9.3.9",
+    "@nestjs/jwt": "10.0.2",
     "@nestjs/mapped-types": "1.2.2",
+    "@nestjs/passport": "9.0.3",
     "@nestjs/platform-express": "9.3.9",
     "@nestjs/typeorm": "9.0.1",
+    "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "joi": "17.8.3",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
     "pg": "8.9.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0",
@@ -45,9 +51,12 @@
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.3.9",
     "@s-ui/mono": "2.34.0",
+    "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.17",
     "@types/jest": "29.4.0",
     "@types/node": "18.14.1",
+    "@types/passport-jwt": "3.0.8",
+    "@types/passport-local": "1.0.35",
     "@types/pg": "8.6.6",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.53.0",
