--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "dayjs": "1.11.7",
     "joi": "17.8.3",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
