--- a/web/package.json
+++ b/web/package.json
@@ -46,8 +46,11 @@
       "last 1 safari version"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bsebas/alignmind.git"
+  },
   "devDependencies": {
-    "@s-ui/mono": "2.34.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@vitejs/plugin-react": "3.1.0",
