--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,16 +1,24 @@
 {
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "env": {
         "browser": true,
         "es2021": true
     },
     "extends": [
         "plugin:react/recommended",
-        "standard"
+        "standard-with-typescript"
     ],
     "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": [
+            "./tsconfig.json"
+        ]
     },
     "plugins": [
         "react"
