--- a/web/package.json
+++ b/web/package.json
@@ -6,11 +6,11 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@fontsource/roboto": "4.5.8",
-    "@formatjs/intl-pluralrules": "5.1.10",
+    "@formatjs/intl-pluralrules": "5.2.1",
     "@mui/icons-material": "5.11.16",
-    "@mui/material": "5.12.0",
-    "@mui/x-date-pickers": "6.2.0",
-    "axios": "1.3.5",
+    "@mui/material": "5.12.1",
+    "@mui/x-date-pickers": "6.2.1",
+    "axios": "1.3.6",
     "chart.js": "4.2.1",
     "dayjs": "1.11.7",
     "localforage": "1.10.0",
@@ -19,47 +19,32 @@
     "react-color": "2.19.3",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
-    "react-intl": "6.3.2",
+    "react-intl": "6.4.1",
     "react-router-dom": "6.10.0",
     "sort-by": "1.2.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/bsebas/alignmind.git"
   },
   "devDependencies": {
-    "@types/react": "18.0.35",
+    "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
-    "@vitejs/plugin-react": "3.1.0",
-    "eslint": "8.38.0",
-    "eslint-config-standard": "17.0.0",
+    "@vitejs/plugin-react": "4.0.0",
+    "@typescript-eslint/eslint-plugin": "5.59.0",
+    "eslint": "8.39.0",
+    "eslint-config-standard-with-typescript": "34.0.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-n": "15.7.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.32.2",
-    "vite": "4.2.1"
+    "typescript": "5.0.4",
+    "vite": "4.3.1"
   }
 }
