fix(web): Fix eslint config with typescript

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -17,7 +17,7 @@
         "ecmaVersion": "latest",
         "sourceType": "module",
         "project": [
-            "./tsconfig.json"
+            "web/tsconfig.json"
         ]
     },
     "plugins": [
