--- a/web/package.json
+++ b/web/package.json
@@ -34,10 +34,11 @@
     "url": "https://github.com/bsebas/alignmind.git"
   },
   "devDependencies": {
+    "@mui/types": "7.2.4",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
-    "@vitejs/plugin-react": "4.0.0",
     "@typescript-eslint/eslint-plugin": "5.59.0",
+    "@vitejs/plugin-react": "4.0.0",
     "eslint": "8.39.0",
     "eslint-config-standard-with-typescript": "34.0.1",
     "eslint-plugin-import": "2.27.5",
@@ -45,6 +46,7 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.32.2",
     "typescript": "5.0.4",
-    "vite": "4.3.1"
+    "vite": "4.3.1",
+    "vite-plugin-svgr": "2.4.0"
   }
 }
