--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,6 @@
     "axios": "1.3.6",
     "chart.js": "4.2.1",
     "dayjs": "1.11.7",
-    "localforage": "1.10.0",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-color": "2.19.3",
@@ -21,7 +20,8 @@
     "react-helmet-async": "1.3.0",
     "react-intl": "6.4.1",
     "react-router-dom": "6.10.0",
-    "sort-by": "1.2.0"
+    "sort-by": "1.2.0",
+    "usehooks-ts": "2.9.1"
   },
   "scripts": {
     "dev": "vite",
