--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
-    "@fontsource/roboto": "4.5.8",
+    "@fontsource/poppins": "4.5.10",
     "@formatjs/intl-pluralrules": "5.2.1",
     "@mui/icons-material": "5.11.9",
     "@mui/material": "5.11.9",
