--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "typeorm": "node --require ts-node/register ../node_modules/typeorm/cli.js",
     "migrations:generate": "npm run typeorm migration:generate -- -d src/database/dataSource.ts",
     "migrations:run": "npm run typeorm migration:run -- -d src/database/dataSource.ts",
     "migrations:show": "npm run typeorm migration:show -- -d src/database/dataSource.ts",
@@ -34,6 +34,7 @@
     "@nestjs/passport": "9.0.3",
     "@nestjs/platform-express": "9.4.1",
     "@nestjs/typeorm": "9.0.1",
+    "argon2": "0.30.3",
     "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
