refactor(web): Fix code style

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -21,10 +21,12 @@
         ]
     },
     "plugins": [
-        "react"
+        "react",
+        "mui-unused-classes"
     ],
     "rules": {
         "react/jsx-uses-react": "off",
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/no-misused-promises": "off"
     }
 }
