--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@mui/types": "7.2.4",
     "@types/react": "18.2.6",
+    "@types/react-color": "3.0.6",
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@vitejs/plugin-react": "4.0.0",
