--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.13.5",
     "@mui/x-date-pickers": "6.9.0",
+    "@vercel/analytics": "1.0.1",
     "axios": "1.4.0",
     "chart.js": "4.3.0",
     "dayjs": "1.11.8",
