--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "axios": "1.4.0",
     "chart.js": "4.3.0",
     "dayjs": "1.11.8",
+    "jwt-decode": "3.1.2",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-color": "2.19.3",
