--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,22 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "src/*",
+        "dist/*",
+        ""
+      ],
+      "modules/*": [
+        "src/modules/*"
+      ],
+      "database/*": [
+        "src/database/*"
+      ],
+      "auth/*": [
+        "src/auth/*"
+      ],
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
