--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node --require ts-node/register ../node_modules/typeorm/cli.js",
+    "typeorm": "node --require ts-node/register -r tsconfig-paths/register ../node_modules/typeorm/cli.js",
     "migrations:generate": "npm run typeorm migration:generate -- -d src/database/dataSource.ts",
     "migrations:run": "npm run typeorm migration:run -- -d src/database/dataSource.ts",
     "migrations:show": "npm run typeorm migration:show -- -d src/database/dataSource.ts",
