--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,8 @@
     "@nestjs/platform-express": "10.0.5",
     "@nestjs/throttler": "4.2.1",
     "@nestjs/typeorm": "10.0.0",
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.69",
     "argon2": "0.30.3",
     "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
