--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "mindfulyze",
-  "version": "0.0.1",
-  "description": "mindfulyze is a web application for tracking emotions and thoughts. The application was created with the goal of helping you reflect on your emotions and thoughts, and keep a record of them in a simple and organized way.",
-  "author": "bjohansebas <bjohansebas@gmail.com>",
-  "license": "MPL V2",
-  "workspaces": [
-    "web",
-    "server"
-  ],
-  "scripts": {
-    "co": "sui-mono commit",
-    "dev:server": "pnpm --filter server run start:dev",
-    "dev:web": "pnpm --filter web run dev",
-    "build:server": "pnpm --filter server run build",
-    "build:web": "pnpm --filter web run build",
-    "prod:server": "pnpm --filter server run start:prod"
-  },
-  "devDependencies": {
-    "@s-ui/mono": "2.35.0"
-  },
-  "engines": {
-    "pnpm": ">=8.6.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bjohansebas/mindfulyze.git"
-  }
+	"name": "mindfulyze",
+	"description": "Mindfulyze is a web application for tracking emotions and thoughts. The application was created with the goal of helping you reflect on your emotions and thoughts, and keep a record of them in a simple and organized way.",
+	"author": "bjohansebas <bjohansebas@gmail.com>",
+	"license": "MPL-2.0",
+	"workspaces": ["web", "server"],
+	"scripts": {
+		"co": "sui-mono commit",
+		"dev:server": "pnpm --filter server run start:dev",
+		"dev:web": "pnpm --filter web run dev",
+		"build:server": "pnpm --filter server run build",
+		"build:web": "pnpm --filter web run build",
+		"prod:server": "pnpm --filter server run start:prod",
+		"format": "rome format web server",
+		"lint": "rome check web server --apply"
+	},
+	"devDependencies": {
+		"@s-ui/mono": "2.35.0",
+		"rome": "12.1.3"
+	},
+	"engines": {
+		"pnpm": ">=8.6.5"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/bjohansebas/mindfulyze.git"
+	}
 }
