--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,6 @@
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres123
+POSTGRES_PASSWORD=password
 POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+POSTGRES_HOST=host
+JWT_ACCESS_SECRET=secret
+JWT_REFRESH_SECRET=secrect
