--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,8 @@
     "@emotion/styled": "11.11.0",
     "@fontsource/poppins": "5.0.5",
     "@formatjs/intl-pluralrules": "5.2.4",
+    "@headlessui/react": "1.7.16",
+    "@heroicons/react": "2.0.18",
     "@mui/icons-material": "5.14.1",
     "@mui/material": "5.14.1",
     "@mui/x-date-pickers": "6.10.0",
@@ -35,6 +37,9 @@
     "@types/react-color": "3.0.6",
     "@types/react-dom": "18.2.7",
     "@vitejs/plugin-react": "4.0.3",
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.27",
+    "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "vite": "4.4.5",
     "vite-plugin-svgr": "3.2.0"
