--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,9 +15,11 @@
     "@heroicons/react": "2.0.18",
     "@mui/icons-material": "5.14.1",
     "@mui/material": "5.14.1",
+    "@nextui-org/react": "2.0.1",
     "@vercel/analytics": "1.0.1",
     "axios": "1.4.0",
     "chart.js": "4.3.0",
+    "framer-motion": "10.15.0",
     "jwt-decode": "3.1.2",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
