--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,36 +2,33 @@
   "name": "web",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/poppins": "5.0.7",
-    "@formatjs/intl-pluralrules": "5.2.4",
-    "@headlessui/react": "1.7.16",
     "@heroicons/react": "2.0.18",
-    "@nextui-org/react": "2.0.1",
-    "@vercel/analytics": "1.0.1",
+    "@radix-ui/react-icons": "1.3.0",
+    "@types/node": "20.4.9",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "1.0.2",
+    "autoprefixer": "10.4.14",
     "axios": "1.4.0",
-    "framer-motion": "10.15.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.13",
     "jwt-decode": "3.1.2",
+    "next": "13.4.13",
+    "next-auth": "^4.22.5",
+    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-helmet-async": "1.3.0",
-    "react-intl": "6.4.4",
-    "react-router-dom": "6.14.2",
-    "usehooks-ts": "2.9.1"
-  },
-  "devDependencies": {
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "@vitejs/plugin-react": "4.0.4",
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.27",
+    "tailwind-merge": "1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "vite": "4.4.8",
-    "vite-plugin-svgr": "3.2.0"
+    "tailwindcss-animate": "1.0.6",
+    "typescript": "5.1.6"
   }
 }
