--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,3 @@
 {
-  "recommendations": [
-    "rome.rome"
-  ]
+  "recommendations": ["rome.rome", "Prisma.prisma", "dbaeumer.vscode-eslint", "bradlc.vscode-tailwindcss"]
 }
