--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    "source.organizeImports.rome": true
   },
   "[javascript]": {
     "editor.defaultFormatter": "rome.rome"
@@ -17,5 +17,8 @@
   },
   "[json]": {
     "editor.defaultFormatter": "rome.rome"
+  },
+  "[prisma]": {
+    "editor.defaultFormatter": "Prisma.prisma"
   }
 }
