--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,25 +14,27 @@
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-toast": "1.1.4",
-    "@types/node": "20.4.10",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
     "@vercel/analytics": "1.0.2",
-    "autoprefixer": "10.4.14",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.13",
     "next": "13.4.13",
     "next-auth": "4.23.0",
-    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
     "tailwind-merge": "1.14.0",
-    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "1.0.6",
-    "typescript": "5.1.6",
     "zod": "3.21.4"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.10",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.13",
+    "postcss": "8.4.27",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6"
   }
 }
