--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,11 +5,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "pnpm with-env prisma generate",
+    "db:push": "pnpm with-env prisma db push --skip-generate --accept-data-loss",
+    "dev:db": "pnpm with-env prisma studio --port 5556",
+    "with-env": "dotenv -e ../../.env.${NODE_ENV:-local} --"
   },
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.2.0",
+    "@next-auth/prisma-adapter": "1.0.7",
+    "@prisma/client": "5.1.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
@@ -31,9 +37,11 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "dotenv-cli": "7.2.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "postcss": "8.4.27",
+    "prisma": "5.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
