chore(Root): Update .env.example and Update script for commit

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ DATABASE_URL=
 # https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET="supersecret"
 NEXTAUTH_URL="http://localhost:3000"
+
+# Google provider
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
