--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "workspaces": ["apps/**", "packages/**"],
   "scripts": {
-    "co": "pnpm run lint && pnpm run format && sui-mono commit",
+    "co": "pnpm run format && sui-mono commit",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
     "db:docker:startup": "docker compose --profile db up -d",
