--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,11 +23,18 @@
     "@vercel/analytics": "1.0.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
+    "contentlayer": "0.3.4",
+    "github-slugger": "2.0.0",
     "next": "13.4.16",
     "next-auth": "4.23.0",
+    "next-contentlayer": "0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
+    "rehype-autolink-headings": "6.1.1",
+    "rehype-pretty-code": "0.10.0",
+    "rehype-slug": "5.1.0",
+    "remark-gfm": "3.0.1",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.6",
     "zod": "3.22.0"
