--- a/package.json
+++ b/package.json
@@ -1,29 +1,68 @@
 {
   "private": true,
-  "workspaces": ["apps/**", "packages/**"],
   "scripts": {
+    "build": "prisma generate & next build",
     "co": "pnpm run format && sui-mono commit",
     "clean": "git clean -xdf node_modules",
-    "clean:workspaces": "turbo clean",
+    "dev": "next dev",
+    "dev:db": "pnpm with-env prisma studio --port 5556",
     "db:docker:startup": "docker compose --profile db up -d",
     "db:docker:shutdown": "docker compose --profile db down",
-    "db:generate": "turbo db:generate",
-    "db:push": "turbo db:push db:generate",
+    "db:generate": "pnpm with-env prisma generate",
+    "db:push": "pnpm with-env prisma db push --skip-generate --accept-data-loss",
     "app:docker:startup": "pnpm i && docker compose --profile dev up -d",
     "app:docker:shutdown": "pnpm clean:workspaces && docker compose --profile dev down",
-    "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
-    "dev:web": "pnpm --filter web run dev",
     "format": "rome format .",
     "format:fix": "rome format . --write",
-    "lint": "rome check . && turbo lint",
-    "lint:fix": "rome check . --apply"
+    "lint": "rome check .",
+    "lint:next": "next lint",
+    "lint:fix": "rome check . --apply",
+    "start": "next start",
+    "with-env": "dotenv -e .env --"
+  },
+  "dependencies": {
+    "@heroicons/react": "2.0.18",
+    "@hookform/resolvers": "3.2.0",
+    "@next-auth/prisma-adapter": "1.0.7",
+    "@prisma/client": "5.1.1",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-toast": "1.1.4",
+    "@vercel/analytics": "1.0.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
+    "contentlayer": "0.3.4",
+    "github-slugger": "2.0.0",
+    "next": "13.4.16",
+    "next-auth": "4.23.0",
+    "next-contentlayer": "0.3.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.45.4",
+    "rehype-autolink-headings": "6.1.1",
+    "rehype-pretty-code": "0.10.0",
+    "rehype-slug": "5.1.0",
+    "remark-gfm": "3.0.1",
+    "tailwind-merge": "1.14.0",
+    "tailwindcss-animate": "1.0.6",
+    "zod": "3.22.0"
   },
   "devDependencies": {
+    "@types/node": "20.5.0",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
     "@s-ui/mono": "2.36.0",
+    "autoprefixer": "10.4.15",
+    "dotenv-cli": "7.2.1",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.16",
     "husky": "8.0.3",
+    "postcss": "8.4.27",
+    "prisma": "5.1.1",
     "rome": "12.1.3",
-    "turbo": "1.10.12"
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6"
   },
   "engines": {
     "pnpm": ">=8.6.5",
