chore(Root): Add tiptap dependencies, and Add rome rule

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "private": true,
   "scripts": {
+    "app:docker:shutdown": "docker compose --profile dev down",
+    "app:docker:startup": "pnpm i && docker compose --profile dev up -d",
     "build": "prisma generate & next build",
-    "co": "pnpm run format && sui-mono commit",
     "clean": "git clean -xdf node_modules",
-    "dev": "next dev",
-    "dev:db": "pnpm with-env prisma studio --port 5556",
-    "db:docker:startup": "docker compose --profile db up -d",
+    "co": "pnpm run format && sui-mono commit",
     "db:docker:shutdown": "docker compose --profile db down",
+    "db:docker:startup": "docker compose --profile db up -d",
     "db:generate": "pnpm with-env prisma generate",
     "db:push": "pnpm with-env prisma db push --skip-generate --accept-data-loss",
-    "app:docker:startup": "pnpm i && docker compose --profile dev up -d",
-    "app:docker:shutdown": "pnpm clean:workspaces && docker compose --profile dev down",
+    "dev": "prisma generate & next dev",
+    "dev:db": "pnpm with-env prisma studio --port 5556",
     "format": "rome format .",
     "format:fix": "rome format . --write",
     "lint": "rome check .",
-    "lint:next": "next lint",
     "lint:fix": "rome check . --apply",
+    "lint:next": "next lint",
     "start": "next start",
     "with-env": "dotenv -e .env --"
   },
@@ -29,11 +29,27 @@
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-toast": "1.1.4",
+    "@tiptap/core": "2.1.6",
+    "@tiptap/extension-color": "2.1.6",
+    "@tiptap/extension-highlight": "2.1.6",
+    "@tiptap/extension-horizontal-rule": "2.1.6",
+    "@tiptap/extension-link": "2.1.6",
+    "@tiptap/extension-placeholder": "2.1.6",
+    "@tiptap/extension-task-item": "2.1.6",
+    "@tiptap/extension-task-list": "2.1.6",
+    "@tiptap/extension-text-style": "2.1.6",
+    "@tiptap/extension-underline": "2.1.6",
+    "@tiptap/pm": "2.1.6",
+    "@tiptap/react": "2.1.6",
+    "@tiptap/starter-kit": "2.1.6",
+    "@tiptap/suggestion": "2.1.6",
     "@vercel/analytics": "1.0.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "contentlayer": "0.3.4",
+    "framer-motion": "10.16.0",
     "github-slugger": "2.0.0",
+    "lucide-react": "0.268.0",
     "next": "13.4.18",
     "next-auth": "4.23.1",
     "next-contentlayer": "0.3.4",
@@ -44,15 +60,19 @@
     "rehype-pretty-code": "0.10.0",
     "rehype-slug": "5.1.0",
     "remark-gfm": "3.0.1",
+    "sonner": "0.6.2",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.6",
+    "tippy.js": "6.3.7",
+    "tiptap-markdown": "0.8.2",
+    "use-debounce": "9.0.4",
     "zod": "3.22.1"
   },
   "devDependencies": {
+    "@s-ui/mono": "2.37.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "@s-ui/mono": "2.37.0",
     "autoprefixer": "10.4.15",
     "dotenv-cli": "7.3.0",
     "eslint": "8.47.0",
@@ -65,8 +85,8 @@
     "typescript": "5.1.6"
   },
   "engines": {
-    "pnpm": ">=8.6.5",
-    "node": ">=18"
+    "node": "18.x",
+    "pnpm": ">=8.6.5"
   },
   "packageManager": "pnpm@8.6.10"
 }
