--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "5.2.0",
     "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-slot": "1.0.2",
     "@tiptap/core": "2.1.6",
     "@tiptap/extension-color": "2.1.6",
@@ -45,6 +46,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "contentlayer": "0.3.4",
+    "date-fns": "2.30.0",
     "framer-motion": "10.16.1",
     "github-slugger": "2.0.0",
     "lucide-react": "0.268.0",
@@ -52,6 +54,7 @@
     "next-auth": "4.23.1",
     "next-contentlayer": "0.3.4",
     "react": "18.2.0",
+    "react-day-picker": "8.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
     "rehype-autolink-headings": "6.1.1",
