chore(Root): Fix config for ui shadcn

--- a/components.json
+++ b/components.json
@@ -5,12 +5,12 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "app/globals.css",
+    "css": "styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true
   },
   "aliases": {
-    "components": "@/",
-    "utils": "@/lib/utils"
+    "components": "/",
+    "utils": "/lib/utils"
   }
 }
