--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:generate": "pnpm with-env prisma generate",
     "db:push": "pnpm with-env prisma db push --skip-generate --accept-data-loss",
     "dev": "prisma generate & next dev",
-    "dev:db": "pnpm with-env prisma studio --port 5556",
+    "dev:db": "pnpm prisma studio --browser none",
     "format": "rome format .",
     "format:fix": "rome format . --write",
     "lint": "rome check .",
@@ -28,20 +28,20 @@
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-slot": "1.0.2",
-    "@tiptap/core": "2.1.6",
-    "@tiptap/extension-color": "2.1.6",
-    "@tiptap/extension-highlight": "2.1.6",
-    "@tiptap/extension-horizontal-rule": "2.1.6",
-    "@tiptap/extension-link": "2.1.6",
-    "@tiptap/extension-placeholder": "2.1.6",
-    "@tiptap/extension-task-item": "2.1.6",
-    "@tiptap/extension-task-list": "2.1.6",
-    "@tiptap/extension-text-style": "2.1.6",
-    "@tiptap/extension-underline": "2.1.6",
-    "@tiptap/pm": "2.1.6",
-    "@tiptap/react": "2.1.6",
-    "@tiptap/starter-kit": "2.1.6",
-    "@tiptap/suggestion": "2.1.6",
+    "@tiptap/core": "2.1.7",
+    "@tiptap/extension-color": "2.1.7",
+    "@tiptap/extension-highlight": "2.1.7",
+    "@tiptap/extension-horizontal-rule": "2.1.7",
+    "@tiptap/extension-link": "2.1.7",
+    "@tiptap/extension-placeholder": "2.1.7",
+    "@tiptap/extension-task-item": "2.1.7",
+    "@tiptap/extension-task-list": "2.1.7",
+    "@tiptap/extension-text-style": "2.1.7",
+    "@tiptap/extension-underline": "2.1.7",
+    "@tiptap/pm": "2.1.7",
+    "@tiptap/react": "2.1.7",
+    "@tiptap/starter-kit": "2.1.7",
+    "@tiptap/suggestion": "2.1.7",
     "@vercel/analytics": "1.0.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
@@ -49,7 +49,7 @@
     "date-fns": "2.30.0",
     "framer-motion": "10.16.1",
     "github-slugger": "2.0.0",
-    "lucide-react": "0.268.0",
+    "lucide-react": "0.269.0",
     "next": "13.4.19",
     "next-auth": "4.23.1",
     "next-contentlayer": "0.3.4",
@@ -61,7 +61,7 @@
     "rehype-pretty-code": "0.10.0",
     "rehype-slug": "5.1.0",
     "remark-gfm": "3.0.1",
-    "sonner": "0.6.2",
+    "sonner": "0.7.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.6",
     "tippy.js": "6.3.7",
@@ -72,19 +72,19 @@
   "devDependencies": {
     "@s-ui/mono": "2.38.0",
     "@tailwindcss/typography": "0.5.9",
-    "@types/node": "20.5.3",
+    "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "dotenv-cli": "7.3.0",
-    "eslint": "8.47.0",
+    "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "husky": "8.0.3",
     "postcss": "8.4.28",
     "prisma": "5.2.0",
     "rome": "12.1.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   },
   "engines": {
     "node": "18.x",
