--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hookform/resolvers": "3.3.0",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "5.2.0",
+    "@radix-ui/react-avatar": "1.0.3",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-slot": "1.0.2",
