--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "framer-motion": "10.16.1",
     "github-slugger": "2.0.0",
     "lucide-react": "0.269.0",
-    "next": "13.4.19",
+    "next": "^13.4.20-canary.9",
     "next-auth": "4.23.1",
     "next-contentlayer": "0.3.4",
     "react": "18.2.0",
