feat(Root): Add migrations prisma

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,19 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 # The [PASSWORD] is generated into Supabase platform (https://app.supabase.com/project/)
-# WITH SUPABASE
-# DATABASE_URL="postgresql://postgres:[PASSWORD]@db.elnalpjubvyknvqaawva.supabase.co:5432/postgres"
+
+# Connect to Supabase with PgBouncer.
+# DATABASE_URL="postgres://postgres:__PASSWORD__@db.__YOUR_SUPABASE_PROJECT__.supabase.co:6543/postgres?pgbouncer=true"
+# Direct connection to the database. Used for migrations.
+# DIRECT_URL="postgres://postgres:__PASSWORD__@db.__YOUR SUPABASE_PROJECT__.supabase.co:5432/postgres"
+
 # WITH DOCKER - DB
 # DATABASE_URL="postgresql://root:admin@localhost:5432/started-db?schema=public"
 # WITH DOCKER - APP/DB
 # DATABASE_URL="postgresql://root:admin@localhost:5432/started-db?schema=public"
 DATABASE_URL=
+DIRECT_URL=
+
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
