--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-slot": "1.0.2",
+    "@supabase/supabase-js": "2.33.1",
     "@tiptap/core": "2.1.7",
     "@tiptap/extension-color": "2.1.7",
     "@tiptap/extension-highlight": "2.1.7",
