--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "db:push": "pnpm with-env prisma db push --skip-generate --accept-data-loss",
     "dev": "prisma generate & next dev",
     "dev:db": "pnpm prisma studio --browser none",
-    "format": "rome format .",
-    "format:fix": "rome format . --write",
-    "lint": "rome check .",
-    "lint:fix": "rome check . --apply",
+    "format": "biome format .",
+    "format:fix": "biome format . --write",
+    "lint": "biome check .",
+    "lint:fix": "biome check . --apply",
     "lint:next": "next lint",
     "start": "next start",
     "with-env": "dotenv -e .env --"
@@ -71,6 +71,7 @@
     "zod": "3.22.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.0.0",
     "@s-ui/mono": "2.38.0",
     "@tailwindcss/typography": "0.5.9",
     "@types/node": "20.5.6",
@@ -83,7 +84,6 @@
     "husky": "8.0.3",
     "postcss": "8.4.28",
     "prisma": "5.2.0",
-    "rome": "12.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
