refactor(Root): Fix code style

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-  "recommendations": [
-    "prisma.prisma",
-    "dbaeumer.vscode-eslint",
-    "bradlc.vscode-tailwindcss",
-    "biomejs.biome"
-  ]
+  "recommendations": ["prisma.prisma", "dbaeumer.vscode-eslint", "bradlc.vscode-tailwindcss", "biomejs.biome"]
 }
