feat(Root): Add feedback button on navigation, Fix loading navigation

--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,8 @@
 # DATABASE_URL="postgresql://root:admin@localhost:5432/started-db?schema=public"
 # WITH DOCKER - APP/DB
 # DATABASE_URL="postgresql://root:admin@localhost:5432/started-db?schema=public"
-DATABASE_URL=
-DIRECT_URL=
+DATABASE_URL=""
+DIRECT_URL=""
 
 NEXT_PUBLIC_SUPABASE_URL="https://__YOUR_SUPABASE_PROJECT__.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY=""
@@ -38,3 +38,6 @@ GOOGLE_CLIENT_SECRET=""
 # You can generate a new secret_iv on the command line with:
 # openssl rand -base64 32
 SECRET_IV = 'dadajklasjdalksdjaslk'
+
+# Emails
+RESEND_API_KEY=""
