docs(env): update documentation for env

--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,92 @@
-# Since .env.local is gitignored, you can use .env.local.example to build a new `.env.local` file when you clone the repo.
-# Keep this file up-to-date when you add new variables to \`.env.local\`.
+# Environment Variables Configuration
 
-# This file will be committed to version control, so make sure not to have any secrets in it.
-# If you are cloning this repo, create a copy of this file named `.env.local` and populate it with your secrets.
+# -------------------
+# .env
+# -------------------
+# Configuration for a development testing environment deployed elsewhere, such as a database on Supabase or the backend on Vercel.
 
-# Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-# The [PASSWORD] is generated into Supabase platform (https://app.supabase.com/project/)
+# -------------------
+# IMPORTANT NOTICE
+# -------------------
+# Do not store any sensitive information in this file, as it will be committed to version control.
+# If you clone this repository, create a copy named `.env` and populate it with your secrets.
 
-# Connect to Supabase with PgBouncer.
+# -------------------
+# Prisma Configuration
+# -------------------
+# Database connection URL for Prisma.
+# Replace [PASSWORD] with the actual password, which is generated in the Supabase platform.
+
+## Use with Supabase
 # DATABASE_URL="postgres://postgres:__PASSWORD__@db.__YOUR_SUPABASE_PROJECT__.supabase.co:6543/postgres?pgbouncer=true"
-# Direct connection to the database. Used for migrations.
 # DIRECT_URL="postgres://postgres:__PASSWORD__@db.__YOUR SUPABASE_PROJECT__.supabase.co:5432/postgres"
 
-# WITH DOCKER - DB
+## Use with Docker - DB
 # DATABASE_URL="postgresql://root:admin@localhost:5432/started-db?schema=public"
-# WITH DOCKER - APP/DB
-# DATABASE_URL="postgresql://root:admin@localhost:5432/started-db?schema=public"
-DATABASE_URL=""
-DIRECT_URL=""
+# DIRECT_URL="postgresql://root:admin@localhost:5432/started-db?schema=public"
 
-NEXT_PUBLIC_SUPABASE_URL="https://__YOUR_SUPABASE_PROJECT__.supabase.co"
-NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+## Use with Docker - APP/DB
+DATABASE_URL=
+DIRECT_URL=
 
-# Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
+
+# -------------------
+# Supabase Configuration
+# -------------------
+# Configure Supabase API credentials.
+
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+
+# -------------------
+# Next Auth Configuration
+# -------------------
+# Configure Next Auth settings.
+# Generate a new secret with: `openssl rand -base64 32`
+# For more details, refer to: https://next-auth.js.org/configuration/options#secret
+
 NEXTAUTH_SECRET="supersecret"
 NEXTAUTH_URL="http://localhost:3000"
 
-# Google provider
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
 
-# Encript data
-# You can generate a new secret_iv on the command line with:
-# openssl rand -base64 32
-SECRET_IV = 'dadajklasjdalksdjaslk'
+# -------------------
+# Lemon Squeezy Configuration
+# -------------------
+# Configure Lemon Squeezy settings.
+# Add the appropriate URL and API key.
 
-# Emails
-RESEND_API_KEY=""
+LEMON_SQUEEZY_URL=
+LEMON_SQUEEZY_API_KEY=
+
+
+# -------------------
+# Google Configuration
+# -------------------
+# Configure Google API credentials.
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+
+# -------------------
+# Resend Configuration
+# -------------------
+# Configure Resend API credentials.
+
+RESEND_API_KEY=
+
+
+# -------------------
+# Encrypt Configuration
+# -------------------
+# Configure SECRET_IV.
+# Generate a new secret_iv with: `openssl rand -base64 32`
+
+SECRET_IV= 
+
+# -------------------
+# Cohere Configuration
+# -------------------
+# Configure Cohere API credentials.
+COHERE_API_KEY=
