chore(vscode): add new extensions and update settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,13 @@
 {
-  "recommendations": ["prisma.prisma", "dbaeumer.vscode-eslint", "bradlc.vscode-tailwindcss", "biomejs.biome"]
+  "recommendations": [
+    // Linting / Formatting
+    "biomejs.biome",
+    "dbaeumer.vscode-eslint",
+    "usernamehw.errorlens",
+    "prisma.prisma",
+    "bradlc.vscode-tailwindcss",
+
+    // MDX Authoring
+    "unifiedjs.vscode-mdx"
+  ]
 }
