--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "db:migrate": "pnpm with-env prisma migrate dev",
     "dev": "prisma generate & next dev",
     "dev:db": "pnpm prisma studio --browser none",
-    "format": "biome format .",
-    "format:fix": "biome format . --write",
-    "lint": "biome check .",
-    "lint:fix": "biome check . --apply",
-    "lint:next": "next lint",
+    "check": "biome check . --apply",
+    "commit": "git-cz",
     "prepare": "npx husky install",
     "start": "next start",
     "with-env": "dotenv -e .env --"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
   },
   "dependencies": {
     "@heroicons/react": "2.1.1",
@@ -66,16 +68,16 @@
     "geist": "1.2.1",
     "github-slugger": "2.0.0",
     "lucide-react": "0.314.0",
+    "next": "14.1.0",
     "next-auth": "4.24.5",
     "next-contentlayer": "0.3.4",
-    "next": "14.1.0",
     "raw-body": "2.5.2",
+    "react": "18.2.0",
     "react-day-picker": "8.10.0",
-    "react-dom-confetti": "0.2.0",
     "react-dom": "18.2.0",
+    "react-dom-confetti": "0.2.0",
     "react-email": "2.0.0",
     "react-hook-form": "7.49.3",
-    "react": "18.2.0",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-gfm": "4.0.0",
@@ -92,16 +94,18 @@
     "@biomejs/biome": "1.5.3",
     "@commitlint/cli": "18.5.0",
     "@commitlint/config-conventional": "18.5.0",
+    "@commitlint/cz-commitlint": "18.5.0",
     "@tailwindcss/typography": "0.5.10",
     "@types/bcrypt": "5.0.2",
     "@types/node": "20.11.5",
-    "@types/react-dom": "18.2.18",
     "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.17",
+    "commitizen": "4.3.0",
     "dotenv-cli": "7.3.0",
     "encoding": "0.1.13",
-    "eslint-config-next": "14.1.0",
     "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
     "postcss": "8.4.33",
