--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@mindfulyze/tailwind-config",
+  "name": "config",
   "version": "0.0.0",
-  "main": "index.ts",
-  "types": "index.ts",
+  "private": true,
+  "license": "MIT",
+  "files": ["./**"],
   "devDependencies": {
     "tailwindcss": "3.4.1"
   },
