--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,7 +20,7 @@
     "@types/react": "18.2.48",
     "next": "14.1.0",
     "react": "18.2.0",
-    "tsconfig": "workspace:*",
+    "config": "workspace:*",
     "tsup": "8.0.1",
     "typescript": "5.3.3"
   },
