--- a/turbo.json
+++ b/turbo.json
@@ -1,18 +1,29 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env"],
+  "globalDependencies": [".env"],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["!.next/cache/**", ".next/**", "dist/**"]
+      "dependsOn": ["^db:generate", "^build"],
+      "outputs": ["!.next/cache/**", ".next/**", "dist/**"],
+      "dotEnv": [".env"]
     },
     "dev": {
+      "dependsOn": ["^db:generate"],
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dotEnv": [".env"]
     },
     "clean": {
       "cache": false
     },
-    "lint": {}
+    "lint": {},
+    "db:generate": {
+      "cache": false,
+      "dotEnv": [".env"]
+    },
+    "db:push": {
+      "cache": false,
+      "dotEnv": [".env"]
+    }
   }
 }
