fix(utils): fix constants import

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,6 +13,9 @@
       "@/*": [
         "src/*",
       ],
+      "@lib/*": [
+"src/*"
+      ],
       "contentlayer/generated": ["./.contentlayer/generated"]
     },
     "downlevelIteration": true,
