fix(editor): 🐛 fix error when clicking on the content of the popover

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -33,6 +33,7 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "1.0.7",
     "class-variance-authority": "0.7.0",
     "@mindfulyze/ui": "workspace:*",
     "tailwindcss": "3.4.1",
